--- a/views/home.jade
+++ b/views/home.jade
@@ -9,9 +9,9 @@ block content
     li
       a(href="/contactUs") Contact Us
    BR  
-   h1#ww.pp="Happy To See You Here Again"
+   h1#ww.pp="Welcome to THE KOOL PLANS"
    br
    .logo 
       img(src="/images/logoo.png", alt="error")
-   
-   
+
+
