--- a/views/ourServices.jade
+++ b/views/ourServices.jade
@@ -13,5 +13,5 @@ block content
    h1#ww.pp="Our Services"
    .block 
     img(src="/images/ser.png", alt="")
-   p#para.para="We are here to design and develop your websites,"
-   p#para.para="your mobile apps and even your school projects. "
+   p#para.para="We know that you are everyday struggling on where to have breakfast, lunch or dinner with friends , family or your soulmate ,"
+   p#para.para="so we decided to choose for you based on your preferences, our reviews and  the hottest deals of the day. "
